test/types/cptr/c_ptrTo_domain.1.good
$CHPL_HOME/modules/standard/Errors.chpl:nnnn: In function 'compilerError':
$CHPL_HOME/modules/standard/Errors.chpl:nnnn: warning: compiler diagnostic depth value exceeds call stack depth
  $CHPL_HOME/modules/standard/CTypes.chpl:nnnn: called as compilerError(param msg(0) = "c_ptrTo domain type not supported", param errorDepth = 2) from function 'c_ptrTo'
  c_ptrTo_domain.chpl:8: called as c_ptrTo(x: domain(1,int(64),one))
c_ptrTo_domain.chpl:8: error: c_ptrTo domain type not supported
